--- a/my-favorite-kaggle-competition.html
+++ b/my-favorite-kaggle-competition.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="./my-favorite-kaggle-competition.html">
+<link rel="canonical" href="/my-favorite-kaggle-competition.html">
 
         <meta name="author" content="Brendan Borin" />
         <meta name="keywords" content="Kaggle,Java,python" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Brendan Borin's Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="My Favorite Kaggle Competition"/>
-        <meta property="og:url" content="./my-favorite-kaggle-competition.html"/>
+        <meta property="og:url" content="/my-favorite-kaggle-competition.html"/>
         <meta property="og:description" content="MathJax.Hub.Config({ tex2jax: { inlineMath: [ [&#39;$&#39;,&#39;$&#39;], [&#34;\\(&#34;,&#34;\\)&#34;] ], displayMath: [ [&#39;$$&#39;,&#39;$$&#39;], [&#34;\\[&#34;,&#34;\\]&#34;] ], processEscapes: true, processEnvironments: true }, // Center justify equations in code and markdown cells. Elsewhere // we use CSS to left justify single line equations in code cells. displayAlign: &#39;center&#39;, &#34;HTML-CSS&#34;: { styles: {&#39;.MathJax_Display&#39;: {&#34;margin&#34;: 0}}, linebreaks: { automatic: true } } }); In this post, I&#39;d like to discuss my favorite …"/>
         <meta property="article:published_time" content="2017-06-02" />
             <meta property="article:section" content="Kaggle" />
@@ -29,12 +29,12 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="./theme/css/bootstrap.cerulean.min.css" type="text/css"/>
-    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./theme/css/my.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.cerulean.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="/theme/css/my.css" type="text/css"/>
 
-    <link href="./theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
@@ -46,7 +46,7 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
         <div class="navbar-header">
-            <a href="./" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Brendan Borin's Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -67,7 +67,7 @@ Brendan Borin's Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="./my-favorite-kaggle-competition.html"
+                    <a href="/my-favorite-kaggle-competition.html"
                        rel="bookmark"
                        title="Permalink to My Favorite Kaggle Competition">
                         My Favorite Kaggle Competition
@@ -88,11 +88,11 @@ Brendan Borin's Blog            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="./tag/kaggle.html">Kaggle</a>
+	<a href="/tag/kaggle.html">Kaggle</a>
         /
-	<a href="./tag/java.html">Java</a>
+	<a href="/tag/java.html">Java</a>
         /
-	<a href="./tag/python.html">python</a>
+	<a href="/tag/python.html">python</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -2208,10 +2208,10 @@ aBBBHgAAAGgQQR4AAABoEEEeAAAAaBBBHgAAAGjQ/3AK2nC/4rD8AAAAAElFTkSuQmCC
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'https://brendanborin.disqus.com'; // required: replace example with your forum shortname
+            var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'my-favorite-kaggle-competition';
-                var disqus_url = './my-favorite-kaggle-competition.html';
+                var disqus_url = '/my-favorite-kaggle-competition.html';
 
             var disqus_config = function () {
                 this.language = "english";
@@ -2289,18 +2289,18 @@ aBBBHgAAAGgQQR4AAABoEEEeAAAAaBBBHgAAAGjQ/3AK2nC/4rD8AAAAAElFTkSuQmCC
       </div>
    </div>
 </footer>
-<script src="./theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="./theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'https://brendanborin.disqus.com'; // required: replace example with your forum shortname
+        var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function () {
@@ -2331,6 +2331,6 @@ aBBBHgAAAGgQQR4AAABoEEEeAAAAaBBBHgAAAGjQ/3AK2nC/4rD8AAAAAElFTkSuQmCC
     <!-- End Google Analytics Code -->
 
 
-<SCRIPT SRC="./theme/js/my2.js"></SCRIPT> 
+<SCRIPT SRC="/theme/js/my2.js"></SCRIPT> 
 </body>
 </html>
