--- a/the-effect-of-portfolio-size-on-investing-performance.html
+++ b/the-effect-of-portfolio-size-on-investing-performance.html
@@ -9,7 +9,7 @@
 
 
 
-<link rel="canonical" href="./the-effect-of-portfolio-size-on-investing-performance.html">
+<link rel="canonical" href="/the-effect-of-portfolio-size-on-investing-performance.html">
 
         <meta name="author" content="Brendan Borin" />
         <meta name="keywords" content="investing,trading,statistics,python,pandas" />
@@ -18,7 +18,7 @@
         <meta property="og:site_name" content="Brendan Borin's Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="The Effect of Portfolio Size on Investing Performance"/>
-        <meta property="og:url" content="./the-effect-of-portfolio-size-on-investing-performance.html"/>
+        <meta property="og:url" content="/the-effect-of-portfolio-size-on-investing-performance.html"/>
         <meta property="og:description" content="Ever since I was really little, I was always fascinated by the stock market. These days, I trade options on a daily basis, but I&#39;m still interested in strategies for stock investing. In this post, I&#39;m going to look at how the number of stocks in a portfolio affects performance …"/>
         <meta property="article:published_time" content="2017-05-23" />
             <meta property="article:section" content="Investing" />
@@ -31,12 +31,12 @@
 
 
     <!-- Bootstrap -->
-        <link rel="stylesheet" href="./theme/css/bootstrap.cerulean.min.css" type="text/css"/>
-    <link href="./theme/css/font-awesome.min.css" rel="stylesheet">
-<link rel="stylesheet" href="./theme/css/my.css" type="text/css"/>
+        <link rel="stylesheet" href="/theme/css/bootstrap.cerulean.min.css" type="text/css"/>
+    <link href="/theme/css/font-awesome.min.css" rel="stylesheet">
+<link rel="stylesheet" href="/theme/css/my.css" type="text/css"/>
 
-    <link href="./theme/css/pygments/native.css" rel="stylesheet">
-    <link rel="stylesheet" href="./theme/css/style.css" type="text/css"/>
+    <link href="/theme/css/pygments/native.css" rel="stylesheet">
+    <link rel="stylesheet" href="/theme/css/style.css" type="text/css"/>
 
 
 
@@ -48,7 +48,7 @@
 <div class="navbar navbar-default navbar-fixed-top" role="navigation">
 	<div class="container">
         <div class="navbar-header">
-            <a href="./" class="navbar-brand">
+            <a href="/" class="navbar-brand">
 Brendan Borin's Blog            </a>
         </div>
         <div class="collapse navbar-collapse navbar-ex1-collapse">
@@ -69,7 +69,7 @@ Brendan Borin's Blog            </a>
         <article>
             <header class="page-header">
                 <h1>
-                    <a href="./the-effect-of-portfolio-size-on-investing-performance.html"
+                    <a href="/the-effect-of-portfolio-size-on-investing-performance.html"
                        rel="bookmark"
                        title="Permalink to The Effect of Portfolio Size on Investing Performance">
                         The Effect of Portfolio Size on Investing Performance
@@ -90,15 +90,15 @@ Brendan Borin's Blog            </a>
 
 
 <span class="label label-default">Tags</span>
-	<a href="./tag/investing.html">investing</a>
+	<a href="/tag/investing.html">investing</a>
         /
-	<a href="./tag/trading.html">trading</a>
+	<a href="/tag/trading.html">trading</a>
         /
-	<a href="./tag/statistics.html">statistics</a>
+	<a href="/tag/statistics.html">statistics</a>
         /
-	<a href="./tag/python.html">python</a>
+	<a href="/tag/python.html">python</a>
         /
-	<a href="./tag/pandas.html">pandas</a>
+	<a href="/tag/pandas.html">pandas</a>
     
 </footer><!-- /.post-info -->                    </div>
                 </div>
@@ -5955,10 +5955,10 @@ KBQKhUIx4lAiWKFQKBQKhUIx4lAiWKFQKBQKhUIx4vh/VN5VmEDLL7IAAAAASUVORK5CYII=
         <div id="disqus_thread"></div>
         <script type="text/javascript">
             /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-            var disqus_shortname = 'https://brendanborin.disqus.com'; // required: replace example with your forum shortname
+            var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'the-effect-of-portfolio-size-on-investing-performance';
-                var disqus_url = './the-effect-of-portfolio-size-on-investing-performance.html';
+                var disqus_url = '/the-effect-of-portfolio-size-on-investing-performance.html';
 
             var disqus_config = function () {
                 this.language = "english";
@@ -6036,18 +6036,18 @@ KBQKhUIx4lAiWKFQKBQKhUIx4lAiWKFQKBQKhUIx4vh/VN5VmEDLL7IAAAAASUVORK5CYII=
       </div>
    </div>
 </footer>
-<script src="./theme/js/jquery.min.js"></script>
+<script src="/theme/js/jquery.min.js"></script>
 
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="./theme/js/bootstrap.min.js"></script>
+<script src="/theme/js/bootstrap.min.js"></script>
 
 <!-- Enable responsive features in IE8 with Respond.js (https://github.com/scottjehl/Respond) -->
-<script src="./theme/js/respond.min.js"></script>
+<script src="/theme/js/respond.min.js"></script>
 
     <!-- Disqus -->
     <script type="text/javascript">
         /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
-        var disqus_shortname = 'https://brendanborin.disqus.com'; // required: replace example with your forum shortname
+        var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
         /* * * DON'T EDIT BELOW THIS LINE * * */
         (function () {
@@ -6078,6 +6078,6 @@ KBQKhUIx4lAiWKFQKBQKhUIx4lAiWKFQKBQKhUIx4vh/VN5VmEDLL7IAAAAASUVORK5CYII=
     <!-- End Google Analytics Code -->
 
 
-<SCRIPT SRC="./theme/js/my2.js"></SCRIPT> 
+<SCRIPT SRC="/theme/js/my2.js"></SCRIPT> 
 </body>
 </html>
