attempt to fix disqus

--- a/my-favorite-kaggle-competition.html
+++ b/my-favorite-kaggle-competition.html
@@ -2211,7 +2211,7 @@ aBBBHgAAAGgQQR4AAABoEEEeAAAAaBBBHgAAAGjQ/3AK2nC/4rD8AAAAAElFTkSuQmCC
             var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'my-favorite-kaggle-competition';
-                var disqus_url = '/my-favorite-kaggle-competition.html';
+                var disqus_url = 'http://brendanborin.disqus.com/my-favorite-kaggle-competition.html';
 
             var disqus_config = function () {
                 this.language = "english";
