--- a/the-effect-of-portfolio-size-on-investing-performance.html
+++ b/the-effect-of-portfolio-size-on-investing-performance.html
@@ -5958,7 +5958,7 @@ KBQKhUIx4lAiWKFQKBQKhUIx4lAiWKFQKBQKhUIx4vh/VN5VmEDLL7IAAAAASUVORK5CYII=
             var disqus_shortname = 'brendanborin'; // required: replace example with your forum shortname
 
                     var disqus_identifier = 'the-effect-of-portfolio-size-on-investing-performance';
-                var disqus_url = '/the-effect-of-portfolio-size-on-investing-performance.html';
+                var disqus_url = 'http://brendanborin.disqus.com/the-effect-of-portfolio-size-on-investing-performance.html';
 
             var disqus_config = function () {
                 this.language = "english";
