simpsons relationships article

--- a/an-analysis-of-simpsons-dialog.html
+++ b/an-analysis-of-simpsons-dialog.html
@@ -13,13 +13,13 @@
 
         <meta name="author" content="Brendan Borin" />
         <meta name="keywords" content="NLP,Pandas" />
-        <meta name="description" content="Kaggle has a number of datasets that one can download and play with. I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 26. There are three files with information about the characters, the episodes, and …" />
+        <meta name="description" content="Kaggle has a number of datasets that one can download and play with. I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 28. There are three files with information about the characters, the episodes, and …" />
 
         <meta property="og:site_name" content="Brendan Borin's Blog" />
         <meta property="og:type" content="article"/>
         <meta property="og:title" content="An Analysis of Simpsons Dialog"/>
         <meta property="og:url" content="/an-analysis-of-simpsons-dialog.html"/>
-        <meta property="og:description" content="Kaggle has a number of datasets that one can download and play with. I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 26. There are three files with information about the characters, the episodes, and …"/>
+        <meta property="og:description" content="Kaggle has a number of datasets that one can download and play with. I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 28. There are three files with information about the characters, the episodes, and …"/>
         <meta property="article:published_time" content="2017-07-18" />
             <meta property="article:section" content="NLP" />
             <meta property="article:tag" content="NLP" />
@@ -100,8 +100,9 @@ Brendan Borin's Blog            </a>
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<p>Kaggle has a number of datasets that one can download and play with.  I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 26.  There are three files with information about the characters, the episodes, and all lines of dialog.  In particular, the dialog file is quite detailed.  Scenes are defined, and the speaker and timestamp are given for each spoken line.  This is much more detailed than other datasets I have looked for in the past for other shows, some of which have all spoken words, but no speaker attached, making analysis much more difficult.</p>
+<p>Kaggle has a number of datasets that one can download and play with.  I was pleasantly surprised to find one that contains detailed script data for all episodes of The Simpsons up to the beginning of season 28.  There are three files with information about the characters, the episodes, and all lines of dialog.  In particular, the dialog file is quite detailed.  Scenes are defined, and the speaker and timestamp are given for each spoken line.  This is much more detailed than other datasets I have looked for in the past for other shows, some of which have all spoken words, but no speaker attached, making analysis much more difficult.</p>
 <p>There is a lot that can be done with this dataset, but in this post, I'd like to look at the speech of the various characters and determine whether there are significant differences in their vocabularies or sophistication of their speech.</p>
+<p>You can download the dataset <a href="https://www.kaggle.com/wcukierski/the-simpsons-by-the-data">here</a>.</p>
 
 </div>
 </div>
