--- a/relationships-of-simpsons-characters.html
+++ b/relationships-of-simpsons-characters.html
@@ -99,9 +99,8 @@ Brendan Borin's Blog            </a>
                 
 
 
-
 <!-- JavaScript Libraries //-->
-<script src="http://d3js.org/d3.v3.min.js"></script>
+<script src="https://d3js.org/d3.v3.min.js"></script>
 
 <!-- CSS Style //-->
 <style>
